opam-version: "2.0"
synopsis: "The Frenetic Programming Language and Runtime System"
maintainer: "Nate Foster <jnfoster@cs.cornell.edu>"
authors: "Arjun Guha <arjun@cs.umass.edu>, Nate Foster <jnfoster@cs.cornell.edu>, Steffen Smolka <smolka@cs.cornell.edu>"
homepage: "http://frenetic-lang.org"
license: "LGPL-3.0-or-later"
bug-reports: "https://github.com/frenetic-lang/frenetic/issues"
dev-repo: "git+https://github.com/frenetic-lang/frenetic.git"
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" { >= "4.11.0"}
  "dune" { >= "2.0"}
  "odoc" {with-doc}
  #########################
  "async"  {>= "v0.14.0" }
  "base64" {>= "3.5.0"}
  "cohttp" {>= "4.0.0"}
  "cohttp-async" {>= "4.0.0" }
  "core"   {>= "v0.14.0" }
  "cstruct" {>= "6.0.1"}
  "cstruct-sexp" {>= "6.0.1"}
  "ipaddr" {>= "5.2.0"}
  "menhir" {>= "20210419"}
  "mparser" {>= "1.3"}
  "mparser-re" {>= "1.3"}
  "ocamlgraph" {>= "2.0.0"}
  "open" {>= "0.2.1"}
  "ppx_jane" {>= "v0.14.0"}
  "ppx_cstruct" {>= "5.2.0"}
  "ppx_deriving" {>= "5.1"}
  "sedlex" {>= "2.2" & < "2.4"}
  "sexplib" {>= "v0.14.0"}
  "tcpip" {>= "6.3.0"}
  "yojson" {>= "1.7.0"}
]
url {
  src: "https://github.com/frenetic-lang/frenetic/archive/5.0.5.tar.gz"
  checksum: [
    "md5=78c82500acf0dc23a6e3198dbb95ce38"
    "sha512=3e02dc7f8793a00b4040e7edc16117fdedce1650519250ce6ce4be2cd87cb5fe06cb2116b7db1eaed0d68cb82d5114ec18287327b663cd8cb472c4617f538213"
  ]
}
