opam-version: "2.0"
version: "0.1"
synopsis: "McNetKAT: Scalable Verification of Probabilistic Network Programs"
maintainer: "Steffen Smolka <smolka@cs.cornell.edu>"
authors: "see http://www.frenetic-lang.org/probnetkat/#members"
homepage: "http://www.frenetic-lang.org/probnetkat/"
bug-reports: "https://github.com/frenetic-lang/frenetic/issues"
dev-repo: "git://github.com/frenetic-lang/frenetic.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
depends: [
  "ocaml" {>= "4.07.0"}
  "dune" {build}
  "async"
  "async_unix"
  "alcotest"
  "bin_prot"
  "core" {>= "v0.11" & < "v0.12"}
  "cstruct" {>= "3.0" & < "4.0"}
  "frenetic"
  "ipaddr"
  "ocaml-compiler-libs"
  "ocaml-migrate-parsetree"
  "ocamlgraph"
  "open"
  "ppx_cstruct"
  "ppx_deriving"
  "ppx_deriving_yojson"
  "ppx_enumerate"
  "ppx_jane"
  "printbox"
  "rpc_parallel"
  "sedlex" {= "1.99.4"}
  "sexplib" {>= "v0.11" & < "v0.12"}
  "yojson"
  "zarith"
]
