opam-version: "1.2"
available: [ ocaml-version >= "4.05.0" ]
version: "4.2.0"
synopsis: "Frenetic SDN controller & runtime system"
maintainer: "Arjun Guha <arjun@cs.umass.edu>"
authors: "Arjun Guha <arjun@cs.umass.edu>, Nate Foster <jnfoster@cs.cornell.edu>"
homepage: "http://frenetic-lang.org"
bug-reports: "https://github.com/frenetic-lang/frenetic/issues"
dev-repo: "https://github.com/frenetic-lang/frenetic.git"

build: ["dune" "build" "-p" name "-j" jobs]
build-doc: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]
install: ["dune" "install" "-p" name "-j" jobs]

depends: [
  "dune" {build}
  "base64" {>= "2.0.0"}
  "core"   {>= "v0.10.0"}
  "cstruct" {>= "1.0.1"}
  "ipaddr" {>= "2.5.0"}
  "ocamlgraph" {>= "1.8.7"}
  "ppx_jane"
  "ppx_core"
  "ppx_cstruct"
  "ppx_enumerate"
  "ppx_metaquot"
  "sedlex"
  "sexplib"
  "yojson" {>= "1.2.0"}
]
