(library
 (name frenetic_kernel)
 (public_name frenetic.kernel)
 (wrapped true)
 (libraries core base64 cstruct cstruct-sexp ocamlgraph open tcpip tcpip.unix yojson ipaddr sedlex
   sexplib str menhirLib compiler-libs.common)
 (preprocess
  (pps ppx_cstruct ppx_deriving.std ppx_jane -allow-unannotated-ignores))
)
