(library
 (name frenetic_kernel)
 (public_name frenetic.kernel)
 (wrapped true)
 (libraries core core_unix core_unix.filename_unix base64 cstruct cstruct-sexp ocamlgraph open tcpip tcpip.checksum yojson ipaddr sedlex
   sexplib str menhirLib compiler-libs.common)
 (preprocess
  (pps ppx_cstruct ppx_deriving.std ppx_jane))
)
